TAG: lib_java_dbsmgd-5-0-0-1
DATE: 07/05/2012
STAFF: sc
CHANGES: Added FeatureKeyLookup

TAG: lib_java_dbsmgd-4-4-1-2
DATE: 06/16/2011
STAFF: sc
CHANGES: TR10754 Dup EUCOMM, Ishida, Ruley seqTagIDs
1) LogicalDBConstants - add EUCOMM, Ishida, Ruley seqTagId and Cell Line id
   logicalDBs
2) SeqTagIDLookupBySeqKey - added EUCOMM, Ishida and Ruley ldbs to query

TAG: lib_java_dbsmgd-4-4-1-1
DATE: 05/19/2011
STAFF: sc
CHANGES:  TR10723/TR10594/TR10656
1) SeqGeneTrapDAOLookupBySeqKey - Added support for SEQ_GeneTrapKey

TAG: lib_java_dbsmgd-4-3-3-2
DATE: 09/01/2010
STAFF: sc
CHANGES: CellLineStrainKeyLookupByCellLineKey - 
	fixed bug in the query, missing space. Obviously this
	class not currently being used by anything.

TAG: lib_java_dbsmgd-4-3-3-1
DATE: 03/11/2010
STAFF: sc
CHANGES: Merge tr9773 branch to trunk

TAG: lib_java_dbsmgd-tr9773-1
DATE: 02/17/2010
STAFF: sc
CHANGES: LogicalDBConstants - added NCBI Gene Model
  Evidence

TAG: lib_java_dbsmgd-tr9773-BP
DATE: 02/17/2010
STAFF: sc
CHANGES: Branch point tag for MGI4.33
  Link to Gene Model Evidence

TAG: lib_java_dbsmgd-4-3-0-1
DATE: 07/14/2009
STAFF: sc
CHANGES: merge TR7493 to trunk

TAG: lib_java_dbsmgd-gtlf-7
TAG: lib_java_dbsmgd-gtlf-6
DATE: 06/30/2009
STAFF: sc
CHANGES: TR7493 - Post Dev Build 6
1) comments and indent updates 

TAG: lib_java_dbsmgd-gtlf-5
DATE: 06/30/2009
STAFF: sc
CHANGES: TR7493 - Post Dev Build 6
1) AlleleSymbolLookupByKey, MarkerSymbolLookupByKey added for reporting

TAG: lib_java_dbsmgd-gtlf-4
DATE: 06/23/2009
STAFF: sc
CHANGES: TR7493 - Post Dev Build 5
1) PubMedIDLookupByAlleleKey- added "order by _Allele_key" to query

TAG: lib_java_dbsmgd-gtlf-3
DATE: 06/18/2009
STAFF: sc
CHANGES: TR7493
1) Several lookups added to support genetrapload

TAG: lib_java_dbsmgd-gtlf-2
DATE: 03/13/2009
STAFF: sc
CHANGES: 
1) Added MGINoteTypeConstants.java
2) Added ALLELE_SEQUENCE to MGIRefAssocTypeConstants.java
3) AccessionLookup.java - removed throw of KeyNotFound (i.e. not thrown)