@@ -9,7 +9,6 @@ ALL_Marker_Assoc
 MAP_Coord_Collection
 MAP_Coordinate
 MAP_Coord_Feature
-MGI_AttributeHistory
 MGI_dbinfo
 MGI_Note
 MGI_NoteChunk
